--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -18,5 +18,5 @@ Resources:
         MyTimeApi:
           Type: Api
           Properties:
-            Path: /TimeResource
+            Path: /TimeFunction
             Method: GET
