--- a/newtt.yml
+++ b/newtt.yml
@@ -1,10 +1,22 @@
+
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Outputs the time
 Resources:
-  rekognitionvideo:
+  NestedTemplate:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: ./nested-template.json 
+  TimeFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: 'com.amazonaws.lambda.demo.LambdaFunctionHandler::handleRequest'
-      Runtime:  java8
-      CodeUri: s3://demo-pipeline-1/index.zip
+      FunctionName: 'TimeFunction'
+      Handler: index.handler
+      Runtime: nodejs6.10
+      CodeUri: ./
+      Events:
+        MyTimeApi:
+          Type: Api
+          Properties:
+            Path: /TimeFunction
+            Method: GET
