--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -1,9 +1,9 @@
 
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: Outputs the time
-Resources:
-  TimeFunction:
+Description: Outputs the time 
+Resources: 
+  MyLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: 'TimeFunction'
@@ -14,5 +14,5 @@ Resources:
         MyTimeApi:
           Type: Api
           Properties:
-            Path: /TimeResource
-            Method: GET	
+            Path: /TimeFunction
+            Method: GET
