--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - npm install time
-      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket demo-pipeline-1 
+      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket codepipeline-us-east-1-432104467414 
                                    --output-template-file NewSamTemplate.yaml
 artifacts:
   type: zip
