--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,7 @@ phases:
   install:
     commands:
       - npm install time
-      - aws cloudformation package --template-file samTemplate.yaml --kms-key-id arn:aws:kms:us-east-1:421775237038:key/d91b925c-8a3b-400c-ae49-9122b1f7b85e --s3-bucket codepipeline-us-east-1-432104467414 --output-template NewSamTemplate.yaml
 artifacts:
   type: zip
   files:
-    - NewSamTemplate.yaml
+    - appspec.yml
