--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,10 @@ phases:
   install:
     commands:
       - npm install time
+      - aws cloudformation package --template-file samTemplate.yaml --kms-key-id arn:aws:kms:us-east-1:491398371152:key/aa8461d2-467d-431a-a544-9b0620f276ec --s3-bucket codepipeline-us-east-1-174632319992 --output-template NewSamTemplate.yaml
+
 artifacts:
   type: zip
   files:
-    - appspec.yaml
+    - NewSamTemplate.yaml
+    
